<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>isaac_ros_cam_and_lidar</name>
  <version>0.1.0</version>
  <description>Camera and lidar integration utilities for the ISAAC workspace.</description>
  <maintainer email="devnull@example.com">Codex</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>vision_opencv</depend>
  <depend>isaac_ros_nitros</depend>
  <depend>isaac_ros_nitros_image_type</depend>
  <depend>isaac_ros_managed_nitros</depend>
  <depend>object_detection</depend>
  <exec_depend>livox_ros_driver2</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>isaac_ros_v4l2_camera</exec_depend>
  <exec_depend>isaac_ros_h264_encoder</exec_depend>
  <exec_depend>isaac_ros_rtsp_server</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
