<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>isaac_ros_rtsp_server</name>
  <version>0.0.1</version>
  <description>RTSP server based on live555 for H264/H265 ROS 2 topics.</description>
  <maintainer email="noreply@example.com">noreply</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>isaac_ros_nitros</depend>
  <depend>isaac_ros_managed_nitros</depend>
  <depend>isaac_ros_nitros_compressed_image_type</depend>
  <depend>isaac_ros_nitros_image_type</depend>
  <depend>openssl</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

